<resources>
    <string name="International_text">International</string>
    <string name="International_toll_free">630-686-4097</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ace_indicator">ACE Ind</string>
    <string name="ace_link">ACE link</string>
    <string name="ace_text">ACE Text</string>
    <string name="action_settings">Settings</string>
    <string name="additional_state_requirements">Additional State Requirements</string>
    <string name="address">Address:</string>
    <string name="adesa_terms_of_use">ADESA’s Terms and Conditions</string>
    <string name="adesa_terms_of_use_url">LoginService.svc/GetTermsOfUseBlendedSale/%1$s?culturecode=en&amp;devicetype=android</string>
    <string name="afc_delear_not_found">our records indicate you are not setup with AFC. Please contact 1–855–222–4232.</string>
    <string name="afc_finance_pending">Stocks are still being processed from a previous finance request. Please try again in a few minutes.</string>
    <string name="afc_generic_error">An issue occurred processing your payment. Please try again</string>
    <string name="afc_no_credit_available">No AFC available credit at this time. If you believe this is wrong or wish to increase your credit with AFC, Please contact AFC home branch and provide them your IAA Buyer ID number for information or try again later</string>
    <string name="afc_no_responce">Error occurred while trying to retrieve your available AFC credit. Please try again later.</string>
    <string name="afc_noteligable">No AFC available credit at this time. If you believe this is wrong or wish to increase your credit with AFC, Please contact AFC home branch.</string>
    <string name="afc_questions_phone">AFC Finanace Questions?</string>
    <string name="afc_stock_limit_exceeds">The stocks limit exceeds</string>
    <string name="afc_url_for_more_info">https://www.afcdealer.com/wps/portal/afcd/products/salvage</string>
    <string name="alert_app_rating_default_message">We\'d love you to rate our app and let us know what you think</string>
    <string name="alert_app_rating_default_title">Are you enjoying our app?</string>
    <string name="alert_form_default_message">It only takes a couple of minutes and will help us improve our app</string>
    <string name="alert_form_default_title">Let us know what you think</string>
    <string name="analytic_reference_url">AnalyticsService.svc/analyticstype/</string>
    <string name="analytic_save_url">AnalyticsService.svc/saveanalyticsdata/</string>
    <string name="app_name">IAA Buyer</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arabic_contact_us">(الإمارات العربية المتحدة - (الرقم المجاني</string>
    <string name="at_the_branch">At the Branch</string>
    <string name="auction">Auction</string>
    <string name="auction_completed">Auction Completed</string>
    <string name="auction_date">Auction Date</string>
    <string name="auction_error_body">Try searching by typing the name of a state within the U.S.</string>
    <string name="auction_error_type">No auctions found near you.</string>
    <string name="auction_keyword_hint_text">Branch, City, State or Zip Code</string>
    <string name="auction_now_indicator_url">acserviceswebapi/api/EnableAuctionNow/</string>
    <string name="auction_now_url">acserviceswebapi/api/GetAuctionNowURL/?userid=%1$s&amp;username=%2$s</string>
    <string name="auction_service">AuctionSaleListV2.svc/auctionlocations/?culturecode=en&amp;devicetype=android&amp;SortAscending=true</string>
    <string name="auction_service_path_auction_dates">AuctionSaleList.svc/auctiondates/?culturecode=en&amp;devicetype=android</string>
    <string name="auction_service_path_auction_vehicle_list">AuctionSaleList.svc/branchcode/%1$s/?auctiondate=%2$s&amp;start=%3$s&amp;end=%4$s&amp;culturecode=en&amp;devicetype=android</string>
    <string name="auction_service_path_auction_vehicle_list_post">AuctionSaleListV2.svc/auctionsalelist/</string>
    <string name="auction_service_path_date">AuctionSaleList.svc/AuctionLocations/date/%1$s/?culturecode=en&amp;devicetype=android</string>
    <string name="auction_service_path_location">AuctionSaleList.svc/AuctionLocations?latvalue=%1$s&amp;longvalue=%2$s&amp;culturecode=en&amp;devicetype=android</string>
    <string name="auction_service_path_zip_code">AuctionSaleList.svc/AuctionLocations/zipcode/%1$s/?culturecode=en&amp;devicetype=android</string>
    <string name="auto_registration_url">https://www.iaai.com/</string>
    <string name="available_credit">Available Allowance:</string>
    <string name="award_pending">Pending Approval by</string>
    <string name="award_pending_total_bid_amount">Total Pending :</string>
    <string name="back">back</string>
    <string name="base_broker_community_url">https://help.iaai.com/</string>
    <string name="base_country_state_url">http://qa.buyerregistration.iaai.com/</string>
    <string name="base_https_url">https://mapp.iaai.com/</string>
    <string name="base_https_url_blended_sale">https://www.iaai.com/</string>
    <string name="base_https_url_vehicle_thumbnail">https://vis.iaai.com/</string>
    <string name="base_url">https://mapp.iaai.com/</string>
    <string name="bdt_auction_completed_stock_message">Stock %1$s is no longer available for bidding.</string>
    <string name="bdt_auction_date_range">Date Range</string>
    <string name="dollar_sign">$</string>
    <string name="lbl_Alerts">ALERTS</string>
    <string name="lbl_Alerts_Lower">Alert</string>
    <string name="lbl_BiddingBenchmark">My Bidding Benchmark</string>
    <string name="lbl_PRESALE">Pre-Sale</string>
    <string name="lbl_StocksOnly">My Stocks Only</string>
    <string name="lbl_Won_History">Purchase History</string>
    <string name="lbl_alert_sound">Alert Sound</string>
    <string name="lbl_award_pending">Award Pending</string>
    <string name="lbl_bid_history">Bid History</string>
    <string name="lbl_config_alerts">Configure Alerts</string>
    <string name="lbl_contact_us">Contact Us</string>
    <string name="lbl_current_high">Current Bid</string>
    <string name="lbl_currently">Currently: %s</string>
    <string name="lbl_dashboard_help">Help</string>
    <string name="lbl_dashboard_notification">Notifications</string>
    <string name="lbl_header_managing_offers">After the auction, the Seller has the option to accept your winnig bid or send you a counter offer. Any offers from the Seller will appear in your Manage Offers list. Here are a few tips for managing offers:</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_lost_Prebids">Lost Pre-Bids</string>
    <string name="lbl_menu_feedback">Feedback</string>
    <string name="lbl_menu_home">Home</string>
    <string name="lbl_menu_locations">Locations</string>
    <string name="lbl_menu_my_vehicles">My Account</string>
    <string name="lbl_menu_settings">Settings</string>
    <string name="lbl_my_vehicles_alert">My Vehicles Alert</string>
    <string name="lbl_out_bid">Pre-Bids</string>
    <string name="lbl_pick_up">To Be Picked Up</string>
    <string name="lbl_pre_bid_max">Max Bid</string>
    <string name="lbl_prebid">Pre-Bids</string>
    <string name="lbl_push_notification">Push Notification</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_tobe_paid">To Be Paid</string>
    <string name="lbl_version">Version</string>
    <string name="lbl_vibrate">Vibrate</string>
    <string name="lbl_vibrate_new">Vibrate when a new notification is received</string>
    <string name="lbl_watching">Watching</string>
    <string name="lbl_won_today">Won Today</string>
    <string name="pref_key_change_notification">pref_key_change_notification</string>
    <string name="pref_key_logout">pref_key_logout</string>
    <string name="pref_key_notification_ring_tone">pref_key_notification_ring_tone</string>
    <string name="pref_key_notification_vibrate">pref_key_notification_vibrate</string>
    <string name="pref_key_terms_of_use">pref_key_terms_of_use</string>
    <string name="pref_key_txt_version">pref_key_txt_version</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="title_General">General</string>
    <string name="title_POST_SALE">Post-Sale</string>
    <string name="title_about_iaa">ABOUT IAA</string>
    <string name="title_alert_notif">Alerts &amp; Notifications</string>
    <string name="title_auctions">Auctions</string>
    <string name="title_bidding_benchmark">Bidding Benchmark</string>
    <string name="title_outbid">Outbid</string>
    <string name="title_payment_posted">Payment Posted</string>
    <string name="title_sale_alert">Sale Alert</string>
    <string name="title_state_changes">Award Pending Status Changes</string>
    <string name="title_terms_of_use">Terms Of Use Settings</string>
    <string name="title_vehicle_pick_up">Vehicle Pick Up</string>
    <string name="txt_offer_title1">$25 Increments</string>
    <string name="txt_offer_title2">8:00 pm expiration</string>
    <string name="txt_offer_title3">Starting a negotiation</string>
    <string name="txt_offer_title4">Three negotiation options</string>
    <string name="txt_offer_title5">Countering a bid</string>
    <string name="txt_offer_title6">End of negotiation</string>
    <string name="txt_offer_value1">Bids must be in $25 increments.</string>
    <string name="txt_offer_value2">Each negotiation period expires at 8:00 pm branch local time on the sale date.</string>
    <string name="txt_offer_value3">Negotiation starts when the seller sends you a counter offer based on your high bid.</string>
    <string name="txt_offer_value4">Once negotiation starts, you can keep your bid, buy the vehicle for the seller\'s offer, or raise your bid to a custom amount.</string>
    <string name="txt_offer_value5">If you counter the seller\'s offer, the seller can accept it or send you a final counter offer.</string>
    <string name="txt_offer_value6">The negotiation ends when either side accepts an offer or the expiration time is reached.</string>
    <string name="usd_text">USD</string>
</resources>