<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:droidfu="http://github.com/droidfu/schema" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <RelativeLayout android:background="@color/bdt_white" android:layout_width="match_parent" android:layout_height="match_parent">
        <ScrollView android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginBottom="10dp">
            <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
                <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/cl_tool_tip_container" android:layout_width="match_parent" android:layout_height="wrap_content"/>
                <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/cl_manage_offer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28dp" android:layout_marginStart="15dp" android:layout_marginEnd="15dp" android:layout_alignParentStart="true" android:layout_alignParentEnd="true">
                    <TextView android:textSize="16sp" android:textStyle="normal" android:textColor="@color/bdt_gray_darkest" android:ellipsize="end" android:id="@+id/txt_manage_offer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_header_managing_offers" android:fontFamily="sans-serif" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
                    <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/bdt_gray_darkest" android:ellipsize="end" android:id="@+id/txt_award_title1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="13dp" android:text="@string/txt_offer_title1" android:fontFamily="sans-serif" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/txt_manage_offer"/>
                    <TextView android:textSize="16sp" android:textStyle="normal" android:textColor="@color/bdt_gray_darkest" android:id="@+id/txt_offer_value1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_offer_value1" android:fontFamily="sans-serif" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/txt_award_title1"/>
                    <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/bdt_gray_darkest" android:ellipsize="end" android:id="@+id/txt_offer_title2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/txt_offer_title2" android:fontFamily="sans-serif" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/txt_offer_value1"/>
                    <TextView android:textSize="16sp" android:textStyle="normal" android:textColor="@color/bdt_gray_darkest" android:id="@+id/txt_offer_value2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_offer_value2" android:fontFamily="sans-serif" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/txt_offer_title2"/>
                    <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/bdt_gray_darkest" android:ellipsize="end" android:id="@+id/txt_offer_title3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/txt_offer_title3" android:fontFamily="sans-serif" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/txt_offer_value2"/>
                    <TextView android:textSize="16sp" android:textStyle="normal" android:textColor="@color/bdt_gray_darkest" android:id="@+id/txt_offer_value3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_offer_value3" android:fontFamily="sans-serif" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/txt_offer_title3"/>
                    <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/bdt_gray_darkest" android:ellipsize="end" android:id="@+id/txt_offer_title4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/txt_offer_title4" android:fontFamily="sans-serif" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/txt_offer_value3"/>
                    <TextView android:textSize="16sp" android:textStyle="normal" android:textColor="@color/bdt_gray_darkest" android:id="@+id/txt_offer_value4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_offer_value4" android:fontFamily="sans-serif" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/txt_offer_title4"/>
                    <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/bdt_gray_darkest" android:ellipsize="end" android:id="@+id/txt_offer_title5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/txt_offer_title5" android:fontFamily="sans-serif" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/txt_offer_value4"/>
                    <TextView android:textSize="16sp" android:textStyle="normal" android:textColor="@color/bdt_gray_darkest" android:id="@+id/txt_offer_value5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_offer_value5" android:fontFamily="sans-serif" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/txt_offer_title5"/>
                    <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/bdt_gray_darkest" android:ellipsize="end" android:id="@+id/txt_offer_title6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/txt_offer_title6" android:fontFamily="sans-serif" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/txt_offer_value5"/>
                    <TextView android:textSize="16sp" android:textStyle="normal" android:textColor="@color/bdt_gray_darkest" android:id="@+id/txt_offer_value6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_offer_value6" android:fontFamily="sans-serif" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/txt_offer_title6"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
